# GpioTest

./: platform.keystore
app/: CMakeLists.txt  build.gradle.kts
app/src/androidTest/java/cn/com/dihealth/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: gpio_utils.cpp
app/src/main/java/cn/com/dihealth/: MainActivity.kt
app/src/main/java/cn/com/dihealth/util/: GpioUtils.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/cn/com/dihealth/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
